이미지 경로 수정

--- a/pages/description.html
+++ b/pages/description.html
@@ -20,7 +20,7 @@
         </header>
         <div class="thumnail room">
             <a href="">
-                <img src="/images/@thumnail_room.png" alt="객실">
+                <img src="../images/@thumnail_room.png" alt="객실">
             </a>
         </div>
         <div class="align vm both mt10 px20" style="padding-top:calc(92vw - 77px);">
@@ -68,7 +68,7 @@
         <div class="align both vm mt10 px20">
             <div class="profile-info-box">
                 <div class="profile-img base">
-                    <img src="/images/@profile_user2.png" alt="사용자 프로필 사진">
+                    <img src="../images/@profile_user2.png" alt="사용자 프로필 사진">
                 </div>
                 <div>
                     <div class="profile-name base">Sandeep S.</div>
@@ -117,7 +117,7 @@
                 Lorem Ipsum is simply dummy text 
             </div>
             <div class="mt10">
-                <img src="/images/img_map.png" alt="" style="width:100%;">
+                <img src="../images/img_map.png" alt="" style="width:100%;">
             </div>
         </div>
         <div class="fix-bottom-type2">
