--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -20,7 +20,7 @@
         </header>
         <div class="thumnail room">
             <a href="">
-                <img src="/images/@thumnail_room.png" alt="객실">
+                <img src="../images/@thumnail_room.png" alt="객실">
             </a>
         </div>
         <div class="align vm both mt10 px20" style="padding-top:calc(92vw - 77px);">
@@ -46,32 +46,32 @@
         <ul class="list-type6 col2 px20 mt15">
             <li>
                 <a href="">
-                    <img src="/images/img_gallery.png" alt="객실">
+                    <img src="../images/img_gallery.png" alt="객실">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="/images/img_gallery.png" alt="객실">
+                    <img src="../images/img_gallery.png" alt="객실">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="/images/img_gallery.png" alt="객실">
+                    <img src="../images/img_gallery.png" alt="객실">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="/images/img_gallery.png" alt="객실">
+                    <img src="../images/img_gallery.png" alt="객실">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="/images/img_gallery.png" alt="객실">
+                    <img src="../images/img_gallery.png" alt="객실">
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="/images/img_gallery.png" alt="객실">
+                    <img src="../images/img_gallery.png" alt="객실">
                 </a>
             </li>
         </ul>
