--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
                 <b>Favorite Home</b>
             </h1>
             <div class="profile-img">
-                <img src="/images/@profile_small.png" alt="사용자 프로필 사진">
+                <img src="../images/@profile_small.png" alt="사용자 프로필 사진">
             </div>
         </div>
         <div class="align gap12 mt24">
@@ -39,7 +39,7 @@
             <li>
                 <a href="">
                     <div class="list-type1__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type1__content">
                         <div class="list-type1__text">
@@ -54,7 +54,7 @@
             <li>
                 <a href="">
                     <div class="list-type1__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type1__content">
                         <div class="list-type1__text">
@@ -75,7 +75,7 @@
             <li>
                 <a href="">
                     <div class="list-type2__thumb ico-wishlist">
-                        <img src="/images/@thumbnail1.png" alt="">
+                        <img src="../images/@thumbnail1.png" alt="">
                     </div>
                     <div class="list-type2__content">
                         <div class="align vm both">
@@ -97,7 +97,7 @@
             <li>
                 <a href="">
                     <div class="list-type2__thumb ico-wishlist">
-                        <img src="/images/@thumbnail1.png" alt="">
+                        <img src="../images/@thumbnail1.png" alt="">
                     </div>
                     <div class="list-type2__content">
                         <div class="align vm both">
@@ -119,7 +119,7 @@
             <li>
                 <a href="">
                     <div class="list-type2__thumb ico-wishlist">
-                        <img src="/images/@thumbnail1.png" alt="">
+                        <img src="../images/@thumbnail1.png" alt="">
                     </div>
                     <div class="list-type2__content">
                         <div class="align vm both">
@@ -141,7 +141,7 @@
             <li>
                 <a href="">
                     <div class="list-type2__thumb ico-wishlist">
-                        <img src="/images/@thumbnail1.png" alt="">
+                        <img src="../images/@thumbnail1.png" alt="">
                     </div>
                     <div class="list-type2__content">
                         <div class="align vm both">
