--- a/pages/listing.html
+++ b/pages/listing.html
@@ -27,7 +27,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -42,7 +42,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -57,7 +57,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -72,7 +72,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -87,7 +87,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -102,7 +102,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -117,7 +117,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
@@ -132,7 +132,7 @@
             <li>
                 <a href="">
                     <div class="list-type3__thumb">
-                        <img src="/images/@thumbnail3.png" alt="">
+                        <img src="../images/@thumbnail3.png" alt="">
                     </div>
                     <div class="list-type3__content">
                         <div class="list-type3__text">
