--- a/pages/profile.html
+++ b/pages/profile.html
@@ -18,7 +18,7 @@
                 data. No one else will be able to see it.
             </div>
             <div class="profile-user-img mt30 text-center">
-                <img src="/images/@profile_user1.png" alt="프로필">
+                <img src="../images/@profile_user1.png" alt="프로필">
             </div>
             <div class="login-form mt20">
                 <div class="input-label-type2">
